spinner e recuperação de senha de usuario

--- a/src/app/criarconta/criarconta.component.html
+++ b/src/app/criarconta/criarconta.component.html
@@ -9,9 +9,10 @@
                     </div>
                     <hr />
 
-                    <div class="text-center">
 
-
+                    <div class="text-center mb-2">
+                        <h5 class="text-success">{{mensagem_sucesso}}</h5>
+                        <h5 class="text-danger">{{mensagem_erro}}</h5>
                     </div>
 
 
@@ -77,6 +78,5 @@
         </div>
     </div>
 </div>
-
 
 
